Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberObject.quorum
class Main
    action Main
        Object v
    number t = 5.0
        v:SetValue(5.0)
        Test(v)
    end

    action Test(number var)
    end
end
